[gd_scene load_steps=2 format=3 uid="uid://1m25e47hkgrn"]

[ext_resource type="Script" uid="uid://cohg2kme4o2te" path="res://scripts/shot_trigger.gd" id="1_5x30m"]

[node name="ShotTrigger" type="Area3D"]
top_level = true
input_ray_pickable = false
monitorable = false
script = ExtResource("1_5x30m")
active = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
